--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
-        "mercadopago/dx-php": "^3.0"
+        "mercadopago/dx-php": "3.0.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
